# tiago_dual_simulation

tiago_dual_2dnav_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_dual_2dnav_gazebo/launch/: tiago_dual_mapping.launch  tiago_dual_mapping_public.launch  tiago_dual_navigation.launch  tiago_dual_navigation_public.launch
tiago_dual_controller_configuration_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_dual_controller_configuration_gazebo/config/: mobile_base_controller_omni.yaml  pids.yaml  pids_omni.yaml
tiago_dual_controller_configuration_gazebo/config/hardware_gazebo/: tiago_dual_pal_hardware_gazebo.yaml.em  tiago_dual_pal_hardware_gazebo_custom_robotiq-2f-140.yaml  tiago_dual_pal_hardware_gazebo_custom_schunk-ft_schunk-wsg_schunk-ft.yaml  tiago_dual_pal_hardware_gazebo_custom_schunk-wsg_schunk-ft.yaml  tiago_dual_pal_hardware_gazebo_pal-gripper_pal-hey5_schunk-ft.yaml  tiago_dual_pal_hardware_gazebo_robotiq-2f-140_schunk-ft_pal-hey5_schunk-ft.yaml  tiago_dual_pal_hardware_gazebo_robotiq-2f-140_schunk-ft_robotiq-2f-140.yaml  tiago_dual_pal_hardware_gazebo_robotiq-2f-85_schunk-ft_schunk-wsg.yaml  tiago_dual_pal_hardware_gazebo_robotiq-2f-85_schunk-wsg.yaml  tiago_dual_pal_hardware_gazebo_schunk-wsg_pal-gripper_schunk-ft.yaml  tiago_dual_pal_hardware_gazebo_schunk-wsg_robotiq-2f-85.yaml  tiago_dual_pal_hardware_gazebo_schunk-wsg_schunk-ft_custom.yaml  tiago_dual_pal_hardware_gazebo_schunk-wsg_schunk-ft_pal-gripper_schunk-ft.yaml  tiago_dual_pal_hardware_gazebo_schunk-wsg_schunk-ft_schunk-wsg.yaml  tiago_dual_pal_hardware_gazebo_schunk-wsg_schunk-ft_schunk-wsg_schunk-ft.yaml  tiago_dual_pal_hardware_gazebo_schunk-wsg_schunk-wsg.yaml  tiago_dual_pal_hardware_gazebo_schunk-wsg_schunk-wsg_schunk-ft.yaml
tiago_dual_controller_configuration_gazebo/launch/: default_controllers.launch  end_effector_controllers.launch  hey5_controller.launch  tiago_dual_controllers.launch
tiago_dual_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
tiago_dual_gazebo/launch/: simulation_tiago_dual_bringup.launch  tiago_dual_gazebo.launch  tiago_dual_spawn.launch
tiago_dual_simulation/: CHANGELOG.rst  CMakeLists.txt  package.xml
