<?xml version="1.0"?>
<package>
  <name>tiago_dual_2dnav_gazebo</name>
  <version>2.0.18</version>
  <description>TiaGo Dual-specific launch files needed to run
    navigation on the TiaGo Dual robot.</description>
  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>
  <license>Modified BSD</license>
  <author email="victor.lopez@pal-robotics.com">Victor Lopez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>tiago_2dnav</run_depend>
  <run_depend>tiago_2dnav_gazebo</run_depend>
  <run_depend>tiago_dual_gazebo</run_depend>
  <run_depend>tiago_dual_2dnav</run_depend>
  <run_depend>pal_navigation_cfg_tiago_dual</run_depend>
</package>
