<?xml version="1.0"?>
<package>
  <name>tiago_dual_gazebo</name>
  <version>2.0.18</version>
  <description>The tiago_dual_gazebo package</description>
  <maintainer email="victor.lopez@pal-robotics.com">Victor Lopez</maintainer>
  <author email="victor.lopez@pal-robotics.com">Victor Lopez</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>pal_gazebo_plugins</run_depend>
  <run_depend>pal_gazebo_worlds</run_depend>
  <run_depend>pal_hardware_gazebo</run_depend>
  <run_depend>tiago_gazebo</run_depend>
  <run_depend>tiago_dual_bringup</run_depend>
  <run_depend>tiago_dual_controller_configuration_gazebo</run_depend>
  <run_depend>tiago_dual_description</run_depend>
  <run_depend>pal_gripper_controller_configuration_gazebo</run_depend>
  <run_depend>pal_pcl_points_throttle_and_filter</run_depend>

  <run_depend>rospy</run_depend>
  <run_depend>play_motion_msgs</run_depend>
</package>
