<?xml version="1.0"?>
<package>
  <name>tiago_dual_simulation</name>
  <version>2.2.3</version>
  <description>The tiago_dual_simulation package</description>
  <maintainer email="victor.lopez@pal-robotics.com">Victor Lopez</maintainer>
  <author email="victor.lopez@pal-robotics.com">Victor Lopez</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>tiago_dual_gazebo</run_depend>
  <run_depend>pal_hardware_gazebo</run_depend>
  <export>
    <metapackage/>
  </export>
</package>
